# OKX-Exchange-Connector

./: .gitignore  CMakeLists.txt  README.md  compile.sh  conanfile.txt  readme.md  run.sh
REST/: CMakeLists.txt  OKXClass.cpp
WebSocket/: CMakeLists.txt
config/: prod.json
docs/: architecture.md  implementation-plan.md
include/: ConfigManager.h
src/: ConfigManager.cpp  main.cpp
